removed items that have been deprecated in Java 9